test/analyze/type_check/anonymous_function/params.exp
Error: Expected type `Unit` but found `Int`
test/analyze/type_check/anonymous_function/params.myte:6:5
 6 |     (x: Unit);
   |      ^

Error: Expected type `Unit` but found `Bool`
test/analyze/type_check/anonymous_function/params.myte:7:5
 7 |     (y: Unit);
   |      ^

Error: Expected type `Unit` but found `String`
test/analyze/type_check/anonymous_function/params.myte:15:7
 15 |       (x: Unit);
    |        ^

Error: Expected type `Unit` but found `Bool`
test/analyze/type_check/anonymous_function/params.myte:16:7
 16 |       (y: Unit);
    |        ^

Error: Expected type `Unit` but found `Byte`
test/analyze/type_check/anonymous_function/params.myte:17:7
 17 |       (z: Unit);
    |        ^

Error: Expected type `Unit` but found `Bool`
test/analyze/type_check/anonymous_function/params.myte:29:3-22
 29 |   ((fn (x) -> x)(true): Unit);
    |    ^^^^^^^^^^^^^^^^^^^

Error: Expected type `Unit` but found `(Int, Bool)`
test/analyze/type_check/anonymous_function/params.myte:30:3-33
 30 |   ((fn (x, y) -> (y, x))(true, 1): Unit);
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Expected type `Unit` but found `(Bool, Int)`
test/analyze/type_check/anonymous_function/params.myte:31:3-33
 31 |   ((fn (x, y) -> (y, x))(1, true): Unit);
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Expected type `(Int) -> Bool` but found `(Byte) -> Bool`
test/analyze/type_check/anonymous_function/params.myte:37:25-49
 37 |   val x: (Int) -> Bool = fn (x) -> x == (1: Byte);
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^

Error: Expected type `Unit` but found `(Int, T)`
test/analyze/type_check/anonymous_function/params.myte:42:3-24
 42 |   ((fn (x) -> (x, y))(1): Unit);
    |    ^^^^^^^^^^^^^^^^^^^^^

Error: Expected type `Unit` but found `(Int) -> (Int, T)`
test/analyze/type_check/anonymous_function/params.myte:43:3-24
 43 |   (fn (x: Int) -> (x, y): Unit);
    |    ^^^^^^^^^^^^^^^^^^^^^

Error: Expected type `Unit` but found `Vec<Bool>`
test/analyze/type_check/anonymous_function/params.myte:50:3
 50 |   (y: Unit);
    |    ^